--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,40 +1,77 @@
 <head>
-    <html lang="it-IT">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <title>{{ page.title }}</title>
 
-    <title>
-        {% if page.title == "Home" %}
-            {{ site.title }} | {{ site.description }}
-        {% else %}
-            {{ page.title }} | {{ site.title }}
-      {% endif %}
-    </title>
-    <meta name="description" content="
-     {% if page.description %}{{ page.description }}
-     {% else %}{{ site.description }}
-    {% endif %}">
+    <!-- Open Graph Meta -->
+    <meta content="{{ site.title }}" property="og:site_name">
+    {%- if page.title -%}
+      <meta content="{{ page.title }}" property="og:title">
+    {%- else -%}
+      <meta content="{{ site.title }}" property="og:title">
+    {%- endif -%}
+    {%- if page.title -%}
+      <meta content="article" property="og:type">
+    {%- else -%}
+      <meta content="website" property="og:type">
+    {%- endif -%}
+    {%- if page.description -%}
+      <meta content="{{ page.description }}" property="og:description">
+    {%- else -%}
+      <meta content="{{ site.description }}" property="og:description">
+    {%- endif -%}
+    {%- if page.url -%}
+      <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+    {%- endif -%}
+    {%- if page.date -%}
+      <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
+      <meta content="{{ site.url }}/about/" property="article:author">
+    {%- endif -%}
+    {%- if page.image -%}
+      <meta content="{{ site.url }}/assets/img/{{ page.image }}" property="og:image">
+    {%- else -%}
+      <meta content="{{ '/assets/img/touring.jpg' | prepend: site.url }}" property="og:image">
+    {%- endif -%}
 
-    <link rel="icon" href="{{"/favicon.ico" | absolute_url }}" type="image/x-icon">
-    <link rel="shortcut icon" href="{{"/favicon.ico" | absolute_url }}" type="image/x-icon">
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@{{ site.social.twitter }}">
+    <meta name="twitter:creator" content="@{{ site.social.twitter }}">
+    {%- if page.title -%}
+      <meta name="twitter:title" content="{{ page.title }}">
+    {%- else -%}
+      <meta name="twitter:title" content="{{ site.title }}">
+    {%- endif -%}
+    {%- if page.url -%}
+      <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+    {%- endif -%}
+    {%- if page.description -%}
+      <meta name="twitter:description" content="{{ page.description }}">
+    {%- else -%}
+      <meta name="twitter:description" content="{{ site.description }}">
+    {%- endif -%}
+    {%- if page.image -%}
+      <meta name="twitter:image:src" content="{{ site.url }}/assets/img/{{ page.image }}">
+    {%- else -%}
+      <meta name="twitter:image:src" content="{{ '/assets/img/touring.jpg' | prepend: site.url }}">
+    {%- endif -%}
 
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
+    <!-- Come and get me RSS readers -->
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}" />
+    
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <!--[if IE 8]><link rel="stylesheet" href="/assets/css/ie.css"><![endif]-->
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 
-    <link rel="stylesheet" href="{{"/assets/css/main.css" | absolute_url }}">
-    <link rel="stylesheet" href="{{ "/assets/css/mobile.css" | absolute_url }}">
+    <!-- Modernizr -->
+    <script src="/assets/js/modernizr.custom.15390.js"" type="text/javascript"></script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-
-        <!-- SEO Plugin -->
-        {% seo %}
-
-        <!-- Google Analytics -->
-        {% if site.data.settings.analytics-id%}
-            {%- include analytics.html -%}
-        {% endif %}
-        <!-- End Google Analytics -->
+    {%- if site.google_analytics -%} {%- include google_analytics.html -%} {%- endif -%}
 </head>
