--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,29 +1,16 @@
-<div id = "header">
-    <h1><a href="{{site.url}}">{{site.title}}</a></h1>
-    <div class = "wave">
-    </div>
-
-    <nav role="navigation">
-      <div id = "desktop-nav">
-        <ul id = "desktop-menu">
-          {% for item in site.data.settings.pages  %}
-          <li><a href="{{ item.link | absolute_url}}"> {{ item.name }}</a></li>
-          {% endfor %}
-        </ul>
-      </div>
-      <div id="hammenuToggle">
-          <input type="checkbox" />
-    
-          <span></span>
-          <span></span>
-          <span></span>
-          
-    
-          <ul id = "menu">
-            {% for item in site.data.settings.pages %}
-            <li><a href="{{ item.link | absolute_url}}">  {{ item.name }}</a></li>
-            {% endfor %}
-          </ul>
-        </div>
-    </nav>
-</div>
+ <div class="header {% if site.header == "large" %}header--large{% endif %}">
+     <div class="container">
+         <h1 class="logo"><a href="/">{{ site.title }}</a></h1>
+         <nav class="nav-collapse">
+             <ul class="noList">
+                 {%- for link in site.navigation -%}{%- assign current = nil -%}{%- if page.url contains link.url or forloop.first and page.url == '/' or page.url == 'index.html' -%}{%- assign current = 'current' -%}{%- endif -%}
+                 <li class="element {%- if forloop.first -%}first{%- endif -%} {{ current }} {%- if forloop.last -%}last{%- endif -%}">
+                     <a href="{{ link.url }}">{{ link.title }}</a>
+                 </li> 
+                 {%- endfor -%}
+                 <li> <a href="https://github.com/brianmaierjr/long-haul" target="_blank">GitHub</a></li>
+                 <li><a href="https://github.com/brianmaierjr/long-haul/archive/master.zip">Download Theme</a></li>
+             </ul>
+         </nav>
+     </div>
+ </div><!-- end .header -->
