--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,47 +1,36 @@
 ---
 layout: default
 ---
+<div class="post">
+  {%- if page.image -%}
+    <div class="featuredImage">
+        <img src="{{ '/assets/img/' | append: page.image }}" alt="" />
+      </div>
+  {%- endif -%}
+  <h1 class="postTitle">{{ page.title }}</h1>
+  <p class="meta">{{ page.date | date: '%B %d, %Y' }} | <span class="time">{{ page.content | number_of_words | divided_by:180 }}</span> Minute Read</p>
+  
+  {{ content }}
 
-<div class = "single-post">
-        <div class="categories">
-                {% assign categories = page.categories %}
-                {% for category in categories %}
-                  <a href="{% capture url %}/cat/#{{ category | slugify }}{% endcapture %}
-                  {{ url | absolute_url }}">{{category}}</a>
-                  {% unless forloop.last %}&nbsp;{% endunless %} 
-                {% endfor %}
-        </div>
-        <h2>{{page.title}}</h2>
-
-        {% if post.cover %}
-                <img src="{{post.cover}}" alt="Podcast Cover">
-        {% else %}
-                <img src="{{ "/assets/img/Podcast_Cover_500.jpg" | absolute_url}}" alt="Podcast Cover">
-        {% endif %}
-        
-        <p>{{page.description}}</p>
-
-        {% capture file %}
-                {{- page.file -}}
-        {% endcapture %}
-        {% capture title %}
-                {{- page.title -}}
-        {% endcapture %}
-
-        {% include player.html file = file title = title %}
-
-        {% if page.videoid %}
-                {% include video.html videoid = page.videoid %}
-        {% endif %}
-
-        {{ content }}
-
-        {% if site.data.settings.shownotes == true %}
-                {% include shownotes.html %}
-        {% endif %}
-
-        
+  <!-- POST NAVIGATION -->
+  <div class="postNav clearfix">
+    {%- if page.previous.url -%} 
+      <a class="prev{% if page.previous.image %} image{% endif %}" href="{{ page.previous.url }}"><span>&laquo;&nbsp;{{ page.previous.title }}</span>
+      {%- if page.previous.image -%} 
+        <img src="{{ '/assets/img/' |  append: page.previous.image }}" alt="">
+      {%- endif -%}
+    </a>
+    {%- endif -%}  
+    {%- if page.next.url -%}  
+      <a class="next{% if page.next.image %} image{% endif %}" href="{{ page.next.url }}"><span>{{ page.next.title }}&nbsp;&raquo;</span>
+      {%- if page.next.image -%} 
+        <img src="{{ '/assets/img/' | append: page.next.image }}" alt="">
+      {%- endif -%} 
+      </a>
+    {%- endif -%} 
+  </div>
 </div>
-{% if site.settings.disqus-shortname %}
-        {%- include disqus.html -%}
-{% endif %}
+
+{%- if site.disqus.shortname -%}
+  {%- include disqus_comments.html -%}
+{%- endif -%}
